Yolov8 detect Plates

--- a/V1_p5/VC_P5.ipynb
+++ b/V1_p5/VC_P5.ipynb
@@ -155,9 +155,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import easyocr\n",
+    "import os\n",
+    "os.environ[\"KMP_DUPLICATE_LIB_OK\"]=\"TRUE\"\n",
     "\n",
     "#Carga del modelo de lengua\n",
     "reader = easyocr.Reader(['es']) \n",
@@ -172,100 +183,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Neither CUDA nor MPS are available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
       "\n",
-      "0: 480x640 (no detections), 158.1ms\n",
-      "Speed: 5.0ms preprocess, 158.1ms inference, 8.5ms postprocess per image at shape (1, 3, 480, 640)\n"
+      "0: 416x640 1 License-Plate, 100.7ms\n",
+      "Speed: 0.0ms preprocess, 100.7ms inference, 0.0ms postprocess per image at shape (1, 3, 416, 640)\n"
      ]
     },
     {
-     "ename": "error",
-     "evalue": "OpenCV(4.8.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:1272: error: (-2:Unspecified error) The function is not implemented. Rebuild the library with Windows, GTK+ 2.x or Cocoa support. If you are on Ubuntu or Debian, install libgtk2.0-dev and pkg-config, then re-run cmake or configure script in function 'cvShowImage'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\guill\\OneDrive\\Documentos\\VC\\VC\\V1_p5\\VC_P5.ipynb Cell 9\u001b[0m line \u001b[0;36m5\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p5/VC_P5.ipynb#X12sZmlsZQ%3D%3D?line=54'>55</a>\u001b[0m             cv2\u001b[39m.\u001b[39mputText(img, classNames[\u001b[39mcls\u001b[39m] , [x1, y1], cv2\u001b[39m.\u001b[39mFONT_HERSHEY_SIMPLEX, \u001b[39m1\u001b[39m, (\u001b[39m255\u001b[39m, \u001b[39m0\u001b[39m, B), \u001b[39m2\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p5/VC_P5.ipynb#X12sZmlsZQ%3D%3D?line=56'>57</a>\u001b[0m     \u001b[39m# Muestra fotograma\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p5/VC_P5.ipynb#X12sZmlsZQ%3D%3D?line=57'>58</a>\u001b[0m     cv2\u001b[39m.\u001b[39;49mimshow(\u001b[39m'\u001b[39;49m\u001b[39mVid\u001b[39;49m\u001b[39m'\u001b[39;49m, img)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p5/VC_P5.ipynb#X12sZmlsZQ%3D%3D?line=59'>60</a>\u001b[0m \u001b[39m# Detenemos pulsado ESC\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p5/VC_P5.ipynb#X12sZmlsZQ%3D%3D?line=60'>61</a>\u001b[0m \u001b[39mif\u001b[39;00m cv2\u001b[39m.\u001b[39mwaitKey(\u001b[39m20\u001b[39m) \u001b[39m==\u001b[39m \u001b[39m27\u001b[39m:\n",
-      "File \u001b[1;32mc:\\Users\\guill\\anaconda3\\envs\\VC_P2\\Lib\\site-packages\\ultralytics\\utils\\patches.py:55\u001b[0m, in \u001b[0;36mimshow\u001b[1;34m(winname, mat)\u001b[0m\n\u001b[0;32m     47\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mimshow\u001b[39m(winname: \u001b[39mstr\u001b[39m, mat: np\u001b[39m.\u001b[39mndarray):\n\u001b[0;32m     48\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     49\u001b[0m \u001b[39m    Displays an image in the specified window.\u001b[39;00m\n\u001b[0;32m     50\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     53\u001b[0m \u001b[39m        mat (np.ndarray): Image to be shown.\u001b[39;00m\n\u001b[0;32m     54\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 55\u001b[0m     _imshow(winname\u001b[39m.\u001b[39;49mencode(\u001b[39m'\u001b[39;49m\u001b[39municode_escape\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m.\u001b[39;49mdecode(), mat)\n",
-      "\u001b[1;31merror\u001b[0m: OpenCV(4.8.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:1272: error: (-2:Unspecified error) The function is not implemented. Rebuild the library with Windows, GTK+ 2.x or Cocoa support. If you are on Ubuntu or Debian, install libgtk2.0-dev and pkg-config, then re-run cmake or configure script in function 'cvShowImage'\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imagen con detecciones de matrículas guardada en: ./Results/filtrado_con_matriculas.jpg\n"
      ]
     }
    ],
    "source": [
     "# Carga del modelo\n",
+    "import cv2  \n",
+    "import math \n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "os.environ[\"KMP_DUPLICATE_LIB_OK\"]=\"FALSE\"\n",
+    "from ultralytics import YOLO\n",
+    "import easyocr\n",
+    "\n",
+    "\n",
     "model = YOLO('./model/last.pt')\n",
     "\n",
     "# Nombre de las distintas clases\n",
     "classNames = [\"License-Plate\"]\n",
+    "reader = easyocr.Reader(['es']) \n",
     "\n",
-    "\n",
+    "img = cv2.imread(\"./testing/prueba4.jpeg\")\n",
     "# Captura desde lawebcam\n",
-    "vid = cv2.VideoCapture(0)\n",
-    "  \n",
-    "while(True):      \n",
-    "    # fotograma a fotograma\n",
-    "    ret, img = vid.read()\n",
-    "  \n",
-    "    # si hay imagen válida\n",
-    "    if ret:  \n",
-    "        # Perform inference on an image\n",
-    "        results = model(img, stream=True)\n",
-    "        \n",
-    "        # Para cada detección\n",
-    "        for r in results:\n",
-    "            boxes = r.boxes\n",
+    "results = model(img)\n",
     "\n",
-    "            for box in boxes:\n",
-    "                # Contenedor\n",
-    "                x1, y1, x2, y2 = box.xyxy[0]\n",
-    "                x1, y1, x2, y2 = int(x1), int(y1), int(x2), int(y2) # convert to int values\n",
-    "                \n",
-    "                # Confianza\n",
-    "                confidence = math.ceil((box.conf[0]*100))/100\n",
-    "                print(\"Confidence --->\",confidence)\n",
+    "# Para cada detección de coche\n",
+    "for r in results:\n",
+    "    boxes = r.boxes\n",
     "\n",
-    "                # Clase\n",
-    "                cls = int(box.cls[0])\n",
-    "                print(\"Class name -->\", classNames[cls])\n",
+    "    for box in boxes:\n",
+    "        cls = int(box.cls[0])\n",
     "\n",
-    "                # Convierte identificador numérico de clase a un color RGB\n",
-    "                escala = int((cls / len(classNames)) * 255 * 3)\n",
-    "                if escala >= 255*2:\n",
-    "                    R = 255\n",
-    "                    G = 255\n",
-    "                    B = escala - 255*2\n",
-    "                else:\n",
-    "                    if escala >= 255:\n",
-    "                        R = 255\n",
-    "                        G = escala - 255\n",
-    "                        B = 0\n",
-    "                    else:\n",
-    "                        R = escala\n",
-    "                        G = 0\n",
-    "                        B = 0\n",
+    "        # Filtrar para mostrar solo las matrículas\n",
+    "        if classNames[cls] == \"License-Plate\":\n",
+    "            # Obtener datos de la detección\n",
+    "            x1, y1, x2, y2 = map(int, box.xyxy[0])  # convertir a enteros\n",
+    "            plate= img[y1:y2, x1:x2]\n",
+    "            result = reader.readtext(plate)\n",
+    "            # Mostrar la caja delimitadora de la matrícula\n",
+    "            cv2.rectangle(img, (x1, y1), (x2, y2), (0, 255, 0), 3)\n",
+    "            cv2.putText(img, result[0][1], (x1, y1), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 255, 0), 2)\n",
     "\n",
-    "                # Dibuja el contenedor y clase\n",
-    "                cv2.rectangle(img, (x1, y1), (x2, y2), (R, G, B), 3)\n",
-    "                cv2.putText(img, classNames[cls] , [x1, y1], cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 0, B), 2)\n",
+    "# Guardar la imagen con las detecciones de matrículas\n",
+    "output_image_path = './Results/filtrado_con_matriculas.jpg'\n",
+    "cv2.imwrite(output_image_path, img)\n",
     "\n",
-    "        # Muestra fotograma\n",
-    "        cv2.imshow('Vid', img)\n",
-    "    \n",
-    "    # Detenemos pulsado ESC\n",
-    "    if cv2.waitKey(20) == 27:\n",
-    "        break\n",
-    "  \n",
-    "# Libera el objeto de captura\n",
-    "vid.release()\n",
-    "# Destruye ventanas\n",
-    "cv2.destroyAllWindows()"
+    "print(f\"Imagen con detecciones de matrículas guardada en: {output_image_path}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
