--- a/V1_p5/VC_P5.ipynb
+++ b/V1_p5/VC_P5.ipynb
@@ -28,123 +28,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Carga del modelo\n",
-    "model = YOLO('yolov8n.pt')\n",
-    "\n",
-    "# Nombre de las distintas clases\n",
-    "classNames = [\"person\", \"bicycle\", \"car\", \"motorbike\", \"aeroplane\", \"bus\", \"train\", \"truck\", \"boat\",\n",
-    "              \"traffic light\", \"fire hydrant\", \"stop sign\", \"parking meter\", \"bench\", \"bird\", \"cat\",\n",
-    "              \"dog\", \"horse\", \"sheep\", \"cow\", \"elephant\", \"bear\", \"zebra\", \"giraffe\", \"backpack\", \"umbrella\",\n",
-    "              \"handbag\", \"tie\", \"suitcase\", \"frisbee\", \"skis\", \"snowboard\", \"sports ball\", \"kite\", \"baseball bat\",\n",
-    "              \"baseball glove\", \"skateboard\", \"surfboard\", \"tennis racket\", \"bottle\", \"wine glass\", \"cup\",\n",
-    "              \"fork\", \"knife\", \"spoon\", \"bowl\", \"banana\", \"apple\", \"sandwich\", \"orange\", \"broccoli\",\n",
-    "              \"carrot\", \"hot dog\", \"pizza\", \"donut\", \"cake\", \"chair\", \"sofa\", \"pottedplant\", \"bed\",\n",
-    "              \"diningtable\", \"toilet\", \"tvmonitor\", \"laptop\", \"mouse\", \"remote\", \"keyboard\", \"cell phone\",\n",
-    "              \"microwave\", \"oven\", \"toaster\", \"sink\", \"refrigerator\", \"book\", \"clock\", \"vase\", \"scissors\",\n",
-    "              \"teddy bear\", \"hair drier\", \"toothbrush\"\n",
-    "              ]\n",
-    "\n",
-    "\n",
-    "# Captura desde lawebcam\n",
-    "vid = cv2.VideoCapture(0)\n",
-    "  \n",
-    "while(True):      \n",
-    "    # fotograma a fotograma\n",
-    "    ret, img = vid.read()\n",
-    "  \n",
-    "    # si hay imagen válida\n",
-    "    if ret:  \n",
-    "        # Perform inference on an image\n",
-    "        results = model(img, stream=True)\n",
-    "        \n",
-    "        # Para cada detección\n",
-    "        for r in results:\n",
-    "            boxes = r.boxes\n",
-    "\n",
-    "            for box in boxes:\n",
-    "                # Contenedor\n",
-    "                x1, y1, x2, y2 = box.xyxy[0]\n",
-    "                x1, y1, x2, y2 = int(x1), int(y1), int(x2), int(y2) # convert to int values\n",
-    "                \n",
-    "                # Confianza\n",
-    "                confidence = math.ceil((box.conf[0]*100))/100\n",
-    "                print(\"Confidence --->\",confidence)\n",
-    "\n",
-    "                # Clase\n",
-    "                cls = int(box.cls[0])\n",
-    "                print(\"Class name -->\", classNames[cls])\n",
-    "\n",
-    "                # Convierte identificador numérico de clase a un color RGB\n",
-    "                escala = int((cls / len(classNames)) * 255 * 3)\n",
-    "                if escala >= 255*2:\n",
-    "                    R = 255\n",
-    "                    G = 255\n",
-    "                    B = escala - 255*2\n",
-    "                else:\n",
-    "                    if escala >= 255:\n",
-    "                        R = 255\n",
-    "                        G = escala - 255\n",
-    "                        B = 0\n",
-    "                    else:\n",
-    "                        R = escala\n",
-    "                        G = 0\n",
-    "                        B = 0\n",
-    "\n",
-    "                # Dibuja el contenedor y clase\n",
-    "                cv2.rectangle(img, (x1, y1), (x2, y2), (R, G, B), 3)\n",
-    "                cv2.putText(img, classNames[cls] , [x1, y1], cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 0, B), 2)\n",
-    "\n",
-    "        # Muestra fotograma\n",
-    "        cv2.imshow('Vid', img)\n",
-    "    \n",
-    "    # Detenemos pulsado ESC\n",
-    "    if cv2.waitKey(20) == 27:\n",
-    "        break\n",
-    "  \n",
-    "# Libera el objeto de captura\n",
-    "vid.release()\n",
-    "# Destruye ventanas\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Reconocimiento de caracteres tras instalar pytesseract y tesseract"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Tesseract\n",
-    "import cv2\n",
-    "import pytesseract\n",
-    "\n",
-    "# Previamente debes descargar los ejecutables\n",
-    "# Si la ruta de Tesseract no está en el PATH, ruta al ejecutable\n",
-    "pytesseract.pytesseract.tesseract_cmd = r'C:/Program Files/Tesseract-OCR/tesseract'\n",
-    "\n",
-    "# Lenguajes disponibles\n",
-    "print(pytesseract.get_languages(config=''))\n",
-    "\n",
-    "#Cargo imagen y ocnvierto a RGB\n",
-    "img = cv2.imread('toy.tif') \n",
-    "img_rgb = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
-    "\n",
-    "#Aplica reconocedor a imagen cargada\n",
-    "print(pytesseract.image_to_string(img_rgb))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -153,61 +36,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "import easyocr\n",
-    "import os\n",
-    "os.environ[\"KMP_DUPLICATE_LIB_OK\"]=\"TRUE\"\n",
-    "\n",
-    "#Carga del modelo de lengua\n",
-    "reader = easyocr.Reader(['es']) \n",
-    "\n",
-    "#Reconocimiento de una imagen\n",
-    "result = reader.readtext('toy.tif')\n",
-    "print(result)\n",
-    "\n",
-    "#Con restricción de caracteres reconocibles\n",
-    "#result = reader.readtext('toy.tif', allowlist ='0123456789')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Neither CUDA nor MPS are available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
-      "\n",
-      "0: 416x640 1 License-Plate, 100.7ms\n",
-      "Speed: 0.0ms preprocess, 100.7ms inference, 0.0ms postprocess per image at shape (1, 3, 416, 640)\n"
+      "Neither CUDA nor MPS are available - defaulting to CPU. Note: This module is much faster with a GPU.\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Imagen con detecciones de matrículas guardada en: ./Results/filtrado_con_matriculas.jpg\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './testing/prueba4.jpg'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\guill\\OneDrive\\Documentos\\VC\\VC\\V1_p5\\VC_P5.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p5/VC_P5.ipynb#W4sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m classNames \u001b[39m=\u001b[39m [\u001b[39m\"\u001b[39m\u001b[39mLicense-Plate\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p5/VC_P5.ipynb#W4sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m reader \u001b[39m=\u001b[39m easyocr\u001b[39m.\u001b[39mReader([\u001b[39m'\u001b[39m\u001b[39mes\u001b[39m\u001b[39m'\u001b[39m]) \n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p5/VC_P5.ipynb#W4sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m img \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39;49mimread(\u001b[39m\"\u001b[39;49m\u001b[39m./testing/prueba4.jpg\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p5/VC_P5.ipynb#W4sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39m# Captura desde lawebcam\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/guill/OneDrive/Documentos/VC/VC/V1_p5/VC_P5.ipynb#W4sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m img \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mresize(img,(\u001b[39m640\u001b[39m,\u001b[39m640\u001b[39m))\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\ultralytics\\utils\\patches.py:25\u001b[0m, in \u001b[0;36mimread\u001b[1;34m(filename, flags)\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mimread\u001b[39m(filename: \u001b[39mstr\u001b[39m, flags: \u001b[39mint\u001b[39m \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mIMREAD_COLOR):\n\u001b[0;32m     15\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     16\u001b[0m \u001b[39m    Read an image from a file.\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[39m        (np.ndarray): The read image.\u001b[39;00m\n\u001b[0;32m     24\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 25\u001b[0m     \u001b[39mreturn\u001b[39;00m cv2\u001b[39m.\u001b[39mimdecode(np\u001b[39m.\u001b[39;49mfromfile(filename, np\u001b[39m.\u001b[39;49muint8), flags)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './testing/prueba4.jpg'"
      ]
     }
    ],
    "source": [
     "# Carga del modelo\n",
     "import cv2  \n",
-    "import math \n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
@@ -224,6 +78,7 @@
     "\n",
     "img = cv2.imread(\"./testing/prueba4.jpeg\")\n",
     "# Captura desde lawebcam\n",
+    "img = cv2.resize(img,(640,640))\n",
     "results = model(img)\n",
     "\n",
     "# Para cada detección de coche\n",
@@ -247,7 +102,11 @@
     "output_image_path = './Results/filtrado_con_matriculas.jpg'\n",
     "cv2.imwrite(output_image_path, img)\n",
     "\n",
-    "print(f\"Imagen con detecciones de matrículas guardada en: {output_image_path}\")\n"
+    "print(f\"Imagen con detecciones de matrículas guardada en: {output_image_path}\")\n",
+    "\n",
+    "#plt.axis(\"off\")\n",
+    "#plt.imshow(output_image_path) \n",
+    "#plt.show()\n"
    ]
   },
   {
@@ -274,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4,
   "vscode": {
