--- a/VC_p6/Demo_BuscaParecidos.ipynb
+++ b/VC_p6/Demo_BuscaParecidos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +23,13 @@
     "from deepface.commons import functions\n",
     "\n",
     "from sklearn.metrics import pairwise_distances_argmin_min\n",
-    "from sklearn.neighbors import NearestNeighbors"
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,12 +162,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def GetSimilarNN(X,idxsimilar, nbrs, embs, Title):\n",
     "    # Gets nearest neighbors\n",
+    "\n",
     "    distance, indices = nbrs.kneighbors(embs)\n",
     "    minp = indices[0][0]\n",
     "\n",
@@ -294,10 +296,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "    \n",
+    "def login():\n",
+    "\n",
+    "    debug = 0\n",
+    "    nconsecutivedetected = 0\n",
+    "    nconsecutivenodetected = 0\n",
+    "    idxsimilarFN = []\n",
+    "\n",
+    "    path = \"./Register/\"\n",
+    "    filesEmbs = []\n",
+    "    files = os.listdir(path)\n",
+    "    NNReg = []\n",
+    "\n",
+    "\n",
+    "    # Calculamos el vector de embeddings de las caras de la carpeta Registered\n",
+    "    for file_name in os.listdir(path):\n",
+    "        print(file_name)\n",
+    "        file_name = path + \"/\" + file_name\n",
+    "        imgReg = cv2.imread(file_name)\n",
+    "        B, G, R = cv2.split(imgReg)\n",
+    "        # Search face \n",
+    "        values = DetectLargestFaceEyesMTCNN(imgReg)\n",
+    "        if values is not None:\n",
+    "            face, eyes, shape = values\n",
+    "\n",
+    "            #draws face container\n",
+    "            [x, y , w, h] = face\n",
+    "            if x > -1:\n",
+    "                cv2.rectangle(imgReg, (x, y), (x + w, y + h), (255, 0, 0), 2)\n",
+    "                # draws eyes and mask if available\n",
+    "                [lex, ley, rex, rey] = eyes\n",
+    "                if lex > -1:                \n",
+    "                    nconsecutivedetected = nconsecutivedetected + 1  #11?\n",
+    "                    nconsecutivenodetected = 0\n",
+    "                    \n",
+    "                    # HS normalization for facenet\n",
+    "                    normalizatorHS.normalize_gray_img(B, lex, ley, rex, rey, faceutils.Kind_wraping.HS)\n",
+    "                    Bnorm = normalizatorHS.normf_image\n",
+    "                    normalizatorHS.normalize_gray_img(G, lex, ley, rex, rey, faceutils.Kind_wraping.HS)\n",
+    "                    Gnorm = normalizatorHS.normf_image\n",
+    "                    normalizatorHS.normalize_gray_img(R, lex, ley, rex, rey, faceutils.Kind_wraping.HS)\n",
+    "                    Rnorm = normalizatorHS.normf_image\n",
+    "                    NormBGRHS = cv2.merge((Bnorm, Gnorm, Rnorm))\n",
+    "                    NormBGR = NormBGRHS[35:115, 39:119, :]\n",
+    "                    \n",
+    "                    # Obtiene embeddings\n",
+    "                    img1 = cv2.resize(NormBGR, dim, interpolation = cv2.INTER_AREA)\n",
+    "                    #embs = model.predict(img1[None,...])\n",
+    "                    embs = calc_embs(np.array([img1]))\n",
+    "                    \n",
+    "                    filesEmbs.append(embs)\n",
+    "                \n",
+    "                    NNReg.append(NearestNeighbors(n_neighbors=kvecinos).fit(embs))\n",
+    "\n",
+    "    # Webcam connection, check unitl one is located\n",
+    "    cap = cv2.VideoCapture(0)\n",
+    "    # Check for other cameras\n",
+    "    if not cap.isOpened():\n",
+    "        cap = cv2.VideoCapture(1)\n",
+    "        if not cap.isOpened():\n",
+    "            cap = cv2.VideoCapture(2)\n",
+    "            if not cap.isOpened():\n",
+    "                print('Camera error')\n",
+    "                exit(0)\n",
+    "            else:\n",
+    "                print('Camera 2')\n",
+    "        else:\n",
+    "            print('Camera 1')\n",
+    "    else:\n",
+    "        print('Camera 2')\n",
+    "        \n",
+    "    #Set camera resolution\n",
+    "    cap.set(3,640);\n",
+    "    cap.set(4,480);\n",
+    "\n",
+    "    # Initializations\n",
+    "\n",
+    "\n",
+    "    while True:\n",
+    "        arr = []\n",
+    "        # Get frame\n",
+    "        t = time.time()\n",
+    "        ret, frame = cap.read()\n",
+    "        # For HS normalization split channels\n",
+    "        B, G, R = cv2.split(frame)\n",
+    "\n",
+    "        # Search face \n",
+    "        values = DetectLargestFaceEyesMTCNN(frame)\n",
+    "        if values is not None:\n",
+    "            face, eyes, shape = values\n",
+    "\n",
+    "            #draws face container\n",
+    "            [x, y , w, h] = face\n",
+    "            if x > -1:\n",
+    "                cv2.rectangle(frame, (x, y), (x + w, y + h), (255, 0, 0), 2)\n",
+    "\n",
+    "                # draws eyes and mask if available\n",
+    "                [lex, ley, rex, rey] = eyes\n",
+    "                if lex > -1:                \n",
+    "                    nconsecutivedetected = nconsecutivedetected + 1  #11?\n",
+    "                    nconsecutivenodetected = 0\n",
+    "                        \n",
+    "                    # Show detected facial elements\n",
+    "                    for (x, y) in shape:\n",
+    "                        cv2.circle(frame, (x, y), 2, (255, 255, 255), -1)\n",
+    "                    cv2.circle(frame, ((int)(lex), (int)(ley)), 4, (0, 0, 255), -1)\n",
+    "                    cv2.circle(frame, ((int)(rex), (int)(rey)), 4, (0, 255, 0), -1)\n",
+    "\n",
+    "                    # HS normalization for facenet\n",
+    "                    normalizatorHS.normalize_gray_img(B, lex, ley, rex, rey, faceutils.Kind_wraping.HS)\n",
+    "                    Bnorm = normalizatorHS.normf_image\n",
+    "                    normalizatorHS.normalize_gray_img(G, lex, ley, rex, rey, faceutils.Kind_wraping.HS)\n",
+    "                    Gnorm = normalizatorHS.normf_image\n",
+    "                    normalizatorHS.normalize_gray_img(R, lex, ley, rex, rey, faceutils.Kind_wraping.HS)\n",
+    "                    Rnorm = normalizatorHS.normf_image\n",
+    "                    NormBGRHS = cv2.merge((Bnorm, Gnorm, Rnorm))\n",
+    "                        \n",
+    "                    # Cropping from HS for facenet\n",
+    "                    NormBGR = NormBGRHS[35:115, 39:119, :]\n",
+    "                    \n",
+    "                    # Obtiene embeddings\n",
+    "                    img1 = cv2.resize(NormBGR, dim, interpolation = cv2.INTER_AREA)\n",
+    "                    #embs = model.predict(img1[None,...])\n",
+    "                    embs = calc_embs(np.array([img1]))\n",
+    "\n",
+    "                    #Comprobamos que el vector de embeddings ya tiene los embeddings de todas las \n",
+    "                    # caras registradas\n",
+    "                    if (len(filesEmbs) == len(files)):\n",
+    "                        \n",
+    "                        # Recorremos el vector de embeddings\n",
+    "                        for i in range(len(filesEmbs)):\n",
+    "                            sim = cosine_similarity(embs, filesEmbs[i])\n",
+    "                            arr.append(sim)\n",
+    "                            \n",
+    "                            confident = str(np.max(arr))\n",
+    "                            cv2.putText(frame, confident, (10, 50), font, 0.5, (0, 0, 255))\n",
+    "\n",
+    "                            # Comprobamos que de todas las imágenes registradas, la que más parecido tiene,\n",
+    "                            # tiene una similitud superior al 60%\n",
+    "                            if (np.max(arr) > 0.80): \n",
+    "                                register = True  \n",
+    "                                cap.release()\n",
+    "                                cv2.destroyAllWindows()    \n",
+    "                                return register          \n",
+    "                            else : register = False\n",
+    "                else:\n",
+    "                    ResetDetectionCounters()\n",
+    "            else:\n",
+    "                ResetDetectionCounters()\n",
+    "        else:\n",
+    "            ResetDetectionCounters()\n",
+    "\n",
+    "        if debug:\n",
+    "            print(\"Processing time : {:.3f}\".format(time.time() - t))\n",
+    "\n",
+    "        # Show resulting image\n",
+    "        cv2.imshow('Cam', frame)\n",
+    "        \n",
+    "        # Esc to finish\n",
+    "        tec = cv2.waitKey(5)\n",
+    "        if tec & tec == 27:  # Esc\n",
+    "            break  \n",
+    "\n",
+    "    # Close windows and release camera\n",
+    "    cap.release()\n",
+    "    cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (1060187603.py, line 31)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[7], line 31\u001b[1;36m\u001b[0m\n\u001b[1;33m    fid = open(\"C:\\Users\\guill\\OneDrive\\Documentos\\UTKFace_DLIB_Nyoki.obj\", \"rb\") #Modelo reducido\u001b[0m\n\u001b[1;37m                                                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import simpledialog, messagebox\n",
+    "import cv2\n",
+    "import os\n",
+    "from datetime import datetime  # Importar datetime correctamente\n",
+    "\n",
+    "detectormtcnn = MTCNN()\n",
+    "register = False\n",
     "# Face detector\n",
     "detectormtcnn = MTCNN()\n",
     "# Normalization utilities\n",
@@ -314,13 +507,13 @@
     "    print(\"Create model\")\n",
     "    #Dataset folders\n",
     "    folders = [\"D:/Datasets/Caras/UTKFace/part1\", \"D:/Datasets/Caras/UTKFace/part2\",\n",
-    "               \"D:/Datasets/Caras/UTKFace/part3\"]\n",
+    "            \"D:/Datasets/Caras/UTKFace/part3\"]\n",
     "    TrainEmbedingsUTKFace(folders,\"D:/FACEScode_models/UTKFace_DLIB_Nyoki_deepfaceSP2021.obj\")\n",
     "\n",
     "#Load appearance dataset\n",
     "print(\"Reading model\")\n",
     "#MODIFICAR EN BASE A TU RUTA\n",
-    "fid = open(\"C:/Users/otsed/Desktop/Docencia/VC/FACEScode_models/UTKFace_DLIB_Nyoki.obj\", \"rb\") #Modelo reducido\n",
+    "fid = open(\"C:/Users/guill/OneDrive/Documentos/UTKFace_DLIB_Nyoki.obj\", \"rb\") #Modelo reducido\n",
     "#fid = open(\"E:/FACEScode_models/UTKFace_DLIB_Nyoki.obj\", \"rb\") # Entrenado similar a normalización Nyoki con 20k\n",
     "#fid = open(\"D:/FACEScode_models/UTKFace_DLIB_Nyoki_deepfaceSP2021.obj\", \"rb\") # Entrenado similar a normalización Nyoki con 2k\n",
     "nimgs, X_FN, embsFN, Age, Gender, Etnia = pickle.load(fid)\n",
@@ -334,112 +527,55 @@
     "# Fonts\n",
     "font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "\n",
-    "# Webcam connection, check unitl one is located\n",
-    "cap = cv2.VideoCapture(0)\n",
-    "# Check for other cameras\n",
-    "if not cap.isOpened():\n",
-    "    cap = cv2.VideoCapture(1)\n",
-    "    if not cap.isOpened():\n",
-    "        cap = cv2.VideoCapture(2)\n",
-    "        if not cap.isOpened():\n",
-    "            print('Camera error')\n",
-    "            exit(0)\n",
-    "        else:\n",
-    "            print('Camera 2')\n",
-    "    else:\n",
-    "        print('Camera 1')\n",
-    "else:\n",
-    "    print('Camera 2')\n",
+    "\n",
+    "\n",
+    "def iniciar_sesion():\n",
+    "    result = login()\n",
+    "    if result == True:\n",
+    "        messagebox.showinfo(\"Login\", \"Te logeaste con exito\")\n",
+    "        ventana.destroy()\n",
+    "\n",
     "    \n",
-    "#Set camera resolution\n",
-    "cap.set(3,640);\n",
-    "cap.set(4,480);\n",
+    "def register():\n",
+    "    # Tomar una foto y guardarla en ./register\n",
+    "    user_name = simpledialog.askstring(\"Registro\", \"Ingrese su nombre:\")\n",
     "\n",
-    "# Initializations\n",
-    "debug = 0\n",
-    "nconsecutivedetected = 0\n",
-    "nconsecutivenodetected = 0\n",
-    "idxsimilarFN = []\n",
+    "    usuario_repetido = login()\n",
     "\n",
-    "while True:\n",
-    "    # Get frame\n",
-    "    t = time.time()\n",
-    "    ret, frame = cap.read()\n",
-    "    # For HS normalization split channels\n",
-    "    B, G, R = cv2.split(frame)\n",
-    "\n",
-    "    # Search face \n",
-    "    values = DetectLargestFaceEyesMTCNN(frame)\n",
-    "    if values is not None:\n",
-    "        face, eyes, shape = values\n",
-    "\n",
-    "        #draws face container\n",
-    "        [x, y , w, h] = face\n",
-    "        if x > -1:\n",
-    "            cv2.rectangle(frame, (x, y), (x + w, y + h), (255, 0, 0), 2)\n",
-    "\n",
-    "            # draws eyes and mask if available\n",
-    "            [lex, ley, rex, rey] = eyes\n",
-    "            if lex > -1:                \n",
-    "                nconsecutivedetected = nconsecutivedetected + 1  #11?\n",
-    "                nconsecutivenodetected = 0\n",
-    "                    \n",
-    "                # Show detected facial elements\n",
-    "                for (x, y) in shape:\n",
-    "                    cv2.circle(frame, (x, y), 2, (255, 255, 255), -1)\n",
-    "                cv2.circle(frame, ((int)(lex), (int)(ley)), 4, (0, 0, 255), -1)\n",
-    "                cv2.circle(frame, ((int)(rex), (int)(rey)), 4, (0, 255, 0), -1)\n",
-    "\n",
-    "                # HS normalization for facenet\n",
-    "                normalizatorHS.normalize_gray_img(B, lex, ley, rex, rey, faceutils.Kind_wraping.HS)\n",
-    "                Bnorm = normalizatorHS.normf_image\n",
-    "                normalizatorHS.normalize_gray_img(G, lex, ley, rex, rey, faceutils.Kind_wraping.HS)\n",
-    "                Gnorm = normalizatorHS.normf_image\n",
-    "                normalizatorHS.normalize_gray_img(R, lex, ley, rex, rey, faceutils.Kind_wraping.HS)\n",
-    "                Rnorm = normalizatorHS.normf_image\n",
-    "                NormBGRHS = cv2.merge((Bnorm, Gnorm, Rnorm))\n",
-    "                cv2.imshow(\"Normalized\", NormBGRHS)\n",
-    "                    \n",
-    "                # Cropping from HS for facenet\n",
-    "                # De HS a lo proximadamente usa nyok https://github.com/nyoki-mtl/keras-facenet\n",
-    "                NormBGR = NormBGRHS[35:115, 39:119, :]\n",
-    "                cv2.imshow(\"Normalizedc\", NormBGR)\n",
-    "                 \n",
-    "                # Obtiene embeddings\n",
-    "                img1 = cv2.resize(NormBGR, dim, interpolation = cv2.INTER_AREA)\n",
-    "                #embs = model.predict(img1[None,...])\n",
-    "                embs = calc_embs(np.array([img1]))\n",
-    "                idxsimilarFN = GetSimilarNN(X_FN,idxsimilarFN, nbrsFN, embs, 'FN Me recuerdas a ...')\n",
-    "                \n",
-    "            else:\n",
-    "                ResetDetectionCounters()\n",
-    "        else:\n",
-    "            ResetDetectionCounters()\n",
+    "    if usuario_repetido == True:\n",
+    "        messagebox.showinfo(\"Alerta\",\"El usuario ya existe\")\n",
     "    else:\n",
-    "        ResetDetectionCounters()\n",
+    "        capture = cv2.VideoCapture(0)\n",
+    "        ret, frame = capture.read()\n",
     "\n",
-    "    if debug:\n",
-    "        print(\"Processing time : {:.3f}\".format(time.time() - t))\n",
+    "        # Crear el directorio si no existe\n",
+    "        output_directory = \"./register\"\n",
+    "        os.makedirs(output_directory, exist_ok=True)\n",
     "\n",
-    "    # Show resulting image\n",
-    "    cv2.imshow('Cam', frame)\n",
-    "    \n",
-    "    # Esc to finish\n",
-    "    tec = cv2.waitKey(5)\n",
-    "    if tec & tec == 27:  # Esc\n",
-    "        break  \n",
+    "        # Obtener la fecha y hora actual para el nombre del archivo\n",
+    "        output_path = os.path.join(output_directory, f\"photo_{user_name}.png\")\n",
     "\n",
-    "# Close windows and release camera\n",
-    "cap.release()\n",
-    "cv2.destroyAllWindows()"
+    "        # Guardar la foto en el directorio\n",
+    "        cv2.imwrite(output_path, frame)\n",
+    "        capture.release()\n",
+    "\n",
+    "        messagebox.showinfo(\"Register\", f\"Foto guardada en {output_path}\")\n",
+    "\n",
+    "# Crear la ventana principal\n",
+    "ventana = tk.Tk()\n",
+    "ventana.title(\"Interfaz de Login y Register\")\n",
+    "\n",
+    "# Crear botón de Login\n",
+    "btn_login = tk.Button(ventana, text=\"Login\", command=iniciar_sesion)\n",
+    "btn_login.pack(pady=10)\n",
+    "\n",
+    "# Crear botón de Register\n",
+    "btn_register = tk.Button(ventana, text=\"Register\", command=register)\n",
+    "btn_register.pack(pady=10)\n",
+    "\n",
+    "# Iniciar el bucle principal de la aplicación\n",
+    "ventana.mainloop()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -458,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "vscode": {
    "interpreter": {
